* correctly detect preceding code block when determining whether to collapse top margin of colist
* apply bottom margin to thematic break that falls at top of page (#2164)
* allow extended converter to override `convert_code` method to handle `convert_listing` and `convert_literal` calls
* restore margin below pass block

== 2.0.0.beta.1 (2022-05-04) - @mojavelinux

Enhancements::

* introduce `index-pagenum-sequence-style` document attribute to control style of sequential page numbers in index when media=screen (#1656)
* allow entry for document in outline to be controlled using `outline-title` attribute (#1789)
* allow extended converter to insert or filter toc entries by overriding `get_entries_for_toc` method (#2097)
* add `asciidoctor/pdf/nopngmagick` script to unregister Gmagick handler for PNG images only (#1687)
* allow theme to configure which end the caption is placed for a block image (#2115)
* add `Page#imported` method to mark page as imported (which suppresses running content)
* add support for `smallcaps` text transform by replacing lowercase letters with small capital variants (#1192)
* use `base-border-color` as default border color; control appearance of border using `border-width` value alone (#2134)
* remove border colors in base theme so all border colors can be controlled using `base-border-color` when extending theme
* enable running footer when using base theme

Bug Fixes::

* allow border width of block image to be specified as an array (1, 2, or 4 values) (#2119)
* rename `delete_page` extension method to `delete_current_page` to avoid conflict with incompatible method on `Prawn::Document`
* remap `table-caption-side` theme key to `table-caption-end` (#2125)
* add missing glyph for `ÿ` in built-in fonts
* remove use of deprecated keys in chronicles-dark-theme.yml

=== Details

{url-repo}/releases/tag/v2.0.0.beta.1[git tag] | {url-repo}/compare/v2.0.0.alpha.3\...v2.0.0.beta.1[full diff]

== 2.0.0.alpha.3 (2022-05-01) - @mojavelinux
