@@ -33,6 +33,7 @@ Bug Fixes::
 * apply bottom margin to thematic break that falls at top of page (#2164)
 * allow extended converter to override `convert_code` method to handle `convert_listing` and `convert_literal` calls
 * restore margin below pass block
+* remove use of deprecated theme keys in default-for-print theme
 
 == 2.0.0.beta.1 (2022-05-04) - @mojavelinux
 
